python/testData/inspections/PyCompatibilityInspection/tryFinallyEmptyRaisePy2.py
try:
    raise ValueError
finally:
    <error descr="Python version 2.7 does not support this syntax. Raise with no arguments can only be used in an except block"><warning descr="Python version 2.6 does not support this syntax. Raise with no arguments can only be used in an except block">raise</warning></error>